# pythoncpu

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cpu/: clock.py  constants.py  cpu.py  flags.py  instruction.py  main.py  registers.py  stack.py  utils.py  vm.py  vram.py
cpu/instructions/: __init__.py  instruction.py
cpu/instructions/byte/: __init__.py  add.py  arithmetic.py  cmp.py  dec.py  define.py  div.py  halt.py  inc.py  instruction.py  jeq.py  jmp.py  jne.py  jng.py  jnz.py  move.py  mul.py  noop.py  sub.py
cpu/tools/: compiler.py
docs/source/: conf.py  index.rst
examples/: 7.out  9.out
examples/loops/: 1.out
tests/: __init__.py  cpu_tests.py
