[tool.poetry]
name = "cpu"
version = "2021.11.02"
description = ""
authors = ["Neil Munro"]

[tool.poetry.dependencies]
python = "3.10"
click = "^8.0.3"
prettytable = "^2.4.0"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
flake8 = "^3.6"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
